--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
             <version>5.2.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.1.0</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
