added new packages and classes

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,3 @@
 browser=chrome
-username=Tester
-password=test
+username=joedone
 weborderURL=http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrders/login.aspx
