added new packages and classes

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,4 @@
 browser=chrome
 username=joedone
 weborderURL=http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrders/login.aspx
+url=qa2.myapplication.com
