--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,4 @@ browser=chrome
 username=joedone
 weborderURL=http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrders/login.aspx
 url=qa2.myapplication.com
+googleURL=http://www.google.com
