--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,6 @@
 browser=chrome
-username=joedone
+usernameSmartBear=tester
+passwordSmartBear=test
 weborderURL=http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrders/login.aspx
 url=qa2.myapplication.com
 googleURL=http://www.google.com
